# Documents_Chat

./: .env.example  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  constraints.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: deps.py  routes_admin.py  routes_auth.py  routes_chat.py  routes_conversations.py  routes_files.py  routes_health.py
backend/app/schemas/: auth.py  chat.py  common.py  conversations.py  files.py
backend/app/services/: chunking.py  embeddings.py  llm.py  parsers.py  prompting.py  vectorstore.py
backend/app/utils/: errors.py  security.py  sqlite_compat.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.cjs
frontend/src/: App.jsx
frontend/src/components/: AdminPanel.jsx  ChatPanel.jsx  ConversationsPanel.jsx  FilesPanel.jsx  HealthOverlay.jsx  SettingsMenu.jsx  SignInSignUp.jsx
frontend/src/components/primitives/: Button.jsx  Card.jsx  Labeled.jsx
frontend/src/context/: SettingsContext.jsx
frontend/src/hooks/: useLocalStorage.js
frontend/src/lib/: ui.js
frontend/src/services/: api.js
public/: app-config.js
